--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,58 +1,33 @@
+@import "mocha.css";
+
 * {
   border: none;
-  font-family: 'JetBrains Mono NF', 'Symbols Nerd Font Mono';
+  border-radius: 0;
+  margin: 0 8px;
+  font-family: "JetBrains Mono NF", "Symbols Nerd Font Mono";
   font-size: 16px;
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
-  min-height: 45px;
-  color: #a6e3a1;
+  color: @text;
 }
 
 window#waybar {
-  background: transparent;
+  background: @base;
+  border-bottom: 3px solid @surface0;
 }
 
-#custom-arch, #workspaces {
-  border-radius: 10px;
-  background-color: #11111b;
-  margin-top: 15px;
-  margin-right: 15px;
-  padding-top: 1px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-#custom-arch {
-  font-size: 20px;
-  margin-left: 15px;
+#workspaces * {
+  margin: 0;
 }
 
 #workspaces button {
-  background: #11111b;
-  color: #a6e3a1;
+  border-bottom: 3px solid transparent;
 }
 
-#clock, #backlight, #pulseaudio, #bluetooth, #network, #battery, #power-profiles-daemon, #custom-power {
-  border-radius: 10px;
-  background-color: #11111b;
-  margin-top: 15px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-right: 15px;
+#workspaces button.active {
+  border-bottom: 3px solid @green;
 }
 
-#backlight, #bluetooth, #battery, #power-profiles-daemon {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  padding-right: 5px;
-  margin-right: 0
-}
 
-#pulseaudio, #network, #power-profiles-daemon, #custom-power {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  padding-left: 5px;
-}
-
-#clock {
-  margin-right: 0;
+#workspaces button.active * {
+  color: @green;
 }
